# Otus_2023_task_7

./: CMakeLists.txt  bulk.cpp
