cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 17)

add_executable(bulk bulk.cpp)

install(TARGETS bulk RUNTIME DESTINATION build)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

include(CPack)